# podifyr-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  docs.yml  release-drafter.yml  release.yml  scorecard.yml
docs/: changelog.md  ci-cd-setup.md  contributing.md  index.md
docs/architecture/: overview.md  pipeline.md  plugins.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
src/podifyr/: __init__.py  __main__.py  cli.py
src/podifyr/agents/: __init__.py  orchestrator.py  state.py
src/podifyr/agents/nodes/: analyzer.py  dialogue.py  scriptwriter.py
src/podifyr/agents/prompts/: __init__.py
src/podifyr/audio/: __init__.py  stitcher.py  synthesizer.py
src/podifyr/audio/backends/: __init__.py  azure_tts.py  edge_tts.py  elevenlabs.py  openai_tts.py
src/podifyr/cache/: __init__.py  manager.py
src/podifyr/cli/: __init__.py  app.py  display.py
src/podifyr/cli/commands/: cache_cmd.py  config_cmd.py  generate.py
src/podifyr/config/: __init__.py  settings.py
src/podifyr/core/: __init__.py  constants.py  exceptions.py  protocols.py  types.py
src/podifyr/graph/: __init__.py  analyzer.py  builder.py  models.py
src/podifyr/llm/: __init__.py
src/podifyr/logging/: __init__.py  setup.py
src/podifyr/parsing/: __init__.py  engine.py  filters.py  models.py  visitors.py
src/podifyr/utils/: __init__.py  async_helpers.py  fs.py  retry.py
tests/: conftest.py
tests/integration/: test_cli.py  test_pipeline.py
tests/unit/: test_agents.py  test_audio.py  test_cache.py  test_config.py  test_graph.py  test_parser.py
