[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "podifyr-ai"
dynamic = ["version"]
description = "Automated developer onboarding via podcast-style audio walkthroughs of Python codebases."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Podifyr Contributors", email = "maintainers@podifyr-ai.dev" },
]
keywords = ["cli", "onboarding", "ast", "audio", "developer-tools", "podcast", "architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "networkx>=3.0",
    "langgraph>=0.1.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "platformdirs>=4.0.0",
    "diskcache>=5.6.0",
    "structlog>=23.0.0",
    "python-dotenv>=1.0.0",
    "edge-tts>=7.0.0",
]

[project.optional-dependencies]
elevenlabs = ["elevenlabs>=0.2.0"]
all = ["podifyr-ai[elevenlabs]"]
dev = [
    "mypy>=1.8.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.92.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
    "types-aiofiles>=23.2.0",
    "types-networkx>=3.2.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
]

[project.scripts]
podifyr-ai = "podifyr.cli:app"

[project.entry-points."podifyr.audio_backends"]
openai = "podifyr.audio.backends.openai_tts:OpenAITTSBackend"
edge = "podifyr.audio.backends.edge_tts:EdgeTTSBackend"
azure = "podifyr.audio.backends.azure_tts:AzureTTSBackend"
elevenlabs = "podifyr.audio.backends.elevenlabs:ElevenLabsTTSBackend"

[project.urls]
Homepage = "https://github.com/anunayandkumar/podifyr-ai"
Documentation = "https://podifyr-ai.dev"
Repository = "https://github.com/anunayandkumar/podifyr-ai"
Issues = "https://github.com/anunayandkumar/podifyr-ai/issues"
Changelog = "https://github.com/anunayandkumar/podifyr-ai/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "calver-by-date"

[tool.hatch.build.targets.wheel]
packages = ["src/podifyr"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "LICENSE", "README.md", "CHANGELOG.md"]

# ─── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["langgraph.*", "langchain.*", "langchain_openai.*", "networkx.*", "diskcache.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ─── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                 # isort
    "N",                 # pep8-naming
    "UP",                # pyupgrade
    "S",                 # bandit (security)
    "B",                 # bugbear
    "A",                 # builtins shadowing
    "C4",                # comprehensions
    "PT",                # pytest style
    "SIM",               # simplify
    "TCH",               # type-checking imports
    "ARG",               # unused arguments
    "ERA",               # commented out code
    "RUF",               # ruff-specific
    "PERF",              # performance
    "FBT",               # boolean trap
    "DTZ",               # datetime timezone
    "LOG",               # logging
    "G",                 # logging format
    "TID",               # tidy imports
]
ignore = ["S101", "S603", "S607"]  # Allow assert in tests, subprocess calls

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG001", "ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["podifyr"]
force-single-line = false
lines-after-imports = 2

# ─── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=podifyr",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (may require network/services)",
    "slow: Slow tests (skipped by default in CI fast mode)",
    "e2e: End-to-end tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:langgraph.*",
]

# ─── Coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["podifyr"]
branch = true
parallel = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]
